// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should allow access to all services via react hook 1`] = `
<span>
  Joined Values: TEST1,TEST2,TEST3
</span>
`;

exports[`should allow access to service via react hook 1`] = `
<span>
  Hello TEST
</span>
`;

exports[`should allow access to service with qualifier via react hook 1`] = `
<span>
  Hello TEST
</span>
`;

exports[`should be able to read properties from react component 1`] = `
<span>
  Hello USER
</span>
`;

exports[`should deny access to all services if declaration is missing 1`] = `"runtime:undeclared-dependency: Package 'test' did not declare an UI dependency on all services implementing interface 'test.Provider'. Add the dependency (\\"all\\": true) to the package configuration or remove the usage."`;

exports[`should deny access to service when the qualifier does not match 1`] = `"runtime:undeclared-dependency: Package 'test' did not declare an UI dependency on interface 'test.Provider' (qualifier: 'bar'). Add the dependency to the package configuration or remove the usage."`;

exports[`should get error when using undefined service 1`] = `"runtime:undeclared-dependency: Package 'test' did not declare an UI dependency on interface 'test.Provider'. Add the dependency to the package configuration or remove the usage."`;

exports[`should provide the autogenerated useProperties hook 1`] = `
<div
  class="ui"
>
  Test-UI: 
  Hello World!
</div>
`;

exports[`should provide the autogenerated useService hook 1`] = `
<div
  class="ui"
>
  Test-UI: 
  TEST
</div>
`;

exports[`should provide the autogenerated useServices hook 1`] = `
<div
  class="ui"
>
  Test-UI: 
  TEST1,TEST2
</div>
`;

exports[`should render application errors 1`] = `
<div
  class="error-ui css-1jz6gpo"
  data-theme="light"
>
  <div
    class="chakra-container css-186t4i0"
    data-theme="light"
  >
    <h1
      class="chakra-heading error-header css-1wo29yf"
      data-theme="light"
    >
      <svg
        class="chakra-icon error-icon css-onkibi"
        data-theme="light"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M23.119,20,13.772,2.15h0a2,2,0,0,0-3.543,0L.881,20a2,2,0,0,0,1.772,2.928H21.347A2,2,0,0,0,23.119,20ZM11,8.423a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Zm1.05,11.51h-.028a1.528,1.528,0,0,1-1.522-1.47,1.476,1.476,0,0,1,1.448-1.53h.028A1.527,1.527,0,0,1,13.5,18.4,1.475,1.475,0,0,1,12.05,19.933Z"
          fill="currentColor"
        />
      </svg>
      Error
    </h1>
    <div
      class="chakra-stack error-details css-cxoxak"
      data-theme="light"
    >
      <p>
        An error prevented the application from displaying correctly.
      </p>
      <p>
        Error: 
        help!
      </p>
      <div
        class="css-1u2zmuc"
        data-theme="light"
      >
        stable
stack
without
paths

      </div>
      Inspect the console to see more details.
    </div>
  </div>
</div>
`;

exports[`should throw error when requesting properties from an unknown package 1`] = `"runtime:internal-error: Package 'test' was not found in this application."`;
